# Django-CRM

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  rav.yaml  requirements.prod.txt  requirements.txt
src/: manage.py  requirements.txt
src/contacts/: models.py
src/contacts/migrations/: 0001_initial.py  0002_contact_user.py  0003_contact_notes.py
src/dashboard/: views.py
src/project/: settings.py  urls.py
src/templates/: base.html  main.html
