[project]
name = "django-crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "django<=6",
  "django-googler>=0.0.20",
  "pre-commit>=4.5.1",
  "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
  "pip>=26.0.1",
]
